--- a/app/src/main/res/layout/create_game_popup.xml
+++ b/app/src/main/res/layout/create_game_popup.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="400dp"
-    android:layout_height="600dp"
+    android:layout_height="wrap_content"
     android:layout_alignParentStart="true"
     android:layout_alignParentEnd="true"
     app:cardBackgroundColor="@color/colorWhite"
@@ -21,24 +21,27 @@
     <RelativeLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="400dp"
-        android:layout_height="600dp"
+        android:layout_height="wrap_content"
 
 
         >
-        <ImageView
-            android:id="@+id/close"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentRight="true"
-            android:layout_marginEnd="7dp"
-            android:src="@drawable/ic_close_black_24dp" />
+
         <RelativeLayout
             android:id="@+id/e1"
             android:layout_width="match_parent"
             android:layout_height="90dp"
-            android:layout_marginTop="50dp"
+            android:layout_alignParentTop="true"
             android:background="@drawable/sett">
+            <ImageView
+                android:id="@+id/close"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentRight="true"
+                android:layout_marginEnd="7dp"
+                android:layout_marginTop="3dp"
+
+                android:src="@drawable/ic_close_black_24dp" />
             <TextView
                 android:id="@+id/title"
                 android:layout_width="wrap_content"
@@ -55,7 +58,7 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="120dp"
+            android:layout_marginTop="70dp"
             android:background="@color/colorWhite">
             <EditText
                 android:id="@+id/info1"
