--- a/app/src/main/res/layout/final_decision_popup.xml
+++ b/app/src/main/res/layout/final_decision_popup.xml
@@ -25,14 +25,7 @@
 
 
             >
-            <ImageView
-                android:id="@+id/close"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentEnd="true"
-                android:layout_alignParentRight="true"
-                android:layout_marginEnd="7dp"
-                android:src="@drawable/ic_close_black_24dp" />
+
 
 
             <RelativeLayout
@@ -41,6 +34,15 @@
                 android:layout_height="90dp"
                 android:layout_alignParentTop="true"
                 android:background="@drawable/sett">
+                <ImageView
+                    android:id="@+id/close"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentEnd="true"
+                    android:layout_marginTop="3dp"
+                    android:layout_alignParentRight="true"
+                    android:layout_marginEnd="7dp"
+                    android:src="@drawable/ic_close_black_24dp" />
                 <TextView
                     android:id="@+id/title"
                     android:layout_width="wrap_content"
