--- a/app/src/main/res/drawable-v24/cornerbutton4.xml
+++ b/app/src/main/res/drawable-v24/cornerbutton4.xml
@@ -2,10 +2,10 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape android:shape="rectangle">
-              <solid android:color="#FFFF"/>
-            <stroke android:color="#FFFF" android:width="2dp" />
+            <solid android:color="#0CE315"/>
+            <stroke android:color="#FFFFFF" android:width="3dp" />
             <!--corners allow us to make the rounded corners button-->
-            <corners android:radius="10dp" />
+            <corners android:radius="30dp" />
         </shape>
     </item>
 </selector>
